[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/font_text.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/font_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://test/ui/PauseMenu.gd" type="Script" id=3]

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
margin_left = 362.0
margin_top = 150.0
margin_right = 662.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 300 )
color = Color( 0.294118, 0.294118, 0.294118, 0.603922 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_left = 362.0
margin_top = 150.0
margin_right = 662.0
margin_bottom = 450.0
rect_min_size = Vector2( 300, 300 )
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 284.0
margin_bottom = 284.0

[node name="Title" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"
align = 1

[node name="Action" type="VBoxContainer" parent="CenterContainer/MarginContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 268.0
margin_bottom = 229.0
size_flags_vertical = 6

[node name="Resume" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Action"]
margin_right = 268.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Resume game"
flat = true

[node name="Restart" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Action"]
margin_top = 52.0
margin_right = 268.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Restart level"
flat = true

[node name="Quit" type="Button" parent="CenterContainer/MarginContainer/VBoxContainer/Action"]
margin_top = 104.0
margin_right = 268.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 48 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Quit to main menu"
flat = true

[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Action/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Action/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/VBoxContainer/Action/Quit" to="." method="_on_Quit_pressed"]
